--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "author": "",
   "license": "MIT",
   "scripts": {
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "yarn run typeorm migration:generate -n",
+    "migration:create": "yarn run typeorm migration:create -n",
+    "migration:run": "yarn run typeorm migration:run",
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
-    "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && npm run build",
+    "start:dev": "set NODE_ENV=development& nodemon",
+    "start:debug": "ndb nodemon",
+    "build-prod": "rimraf dist && npm run build && node dist/main.js",
+    "prestart:prod": "npm i",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
@@ -22,22 +27,39 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/graphql": "^6.5.1",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-socket.io": "^6.7.2",
     "@nestjs/typeorm": "^6.0.0",
-    "dotenv": "^7.0.0",
+    "@nestjs/websockets": "^6.7.2",
+    "@types/moment-timezone": "^0.5.12",
+    "@types/socket.io": "^2.1.2",
+    "apollo-server-express": "^2.9.3",
+    "dotenv": "^8.1.0",
+    "graphql": "^14.5.6",
+    "graphql-tools": "^4.0.5",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "mssql": "^5.0.5",
+    "pg": "^7.12.1",
     "reflect-metadata": "^0.1.12",
+    "request": "^2.88.0",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
+    "socket.io": "^2.3.0",
     "typeorm": "^0.2.16"
   },
   "devDependencies": {
+    "@nestjs/testing": "^6.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
-    "@nestjs/testing": "^6.0.0",
+    "@types/websocket": "^0.0.40",
+    "axios": "^0.19.0",
     "jest": "^23.6.0",
+    "ndb": "^1.1.5",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
     "supertest": "^3.4.1",
